changes to template etc

--- a/packages/react-scripts/template/src/App.css
+++ b/packages/react-scripts/template/src/App.css
@@ -1,28 +1,28 @@
-.App {
+.app {
   text-align: center;
 }
 
-.App-logo {
+.appLogo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
 }
 
-.App-header {
+.appHeader {
   background-color: #222;
   height: 150px;
   padding: 20px;
   color: white;
 }
 
-.App-title {
+.appTitle {
   font-size: 1.5em;
 }
 
-.App-intro {
+.appIntro {
   font-size: large;
 }
 
-@keyframes App-logo-spin {
+@keyframes appLogoSpin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
